[package]
name = "webflow-reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tower-http = { version = "0.5", features = ["cors"] }
http-body-util = "0.1"